--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,12 +1,12 @@
 # Change baseurl before deploy
 baseurl = "https://rguyennot.github.io/blog/"
-languageCode = "en-us"
+languageCode = "fr-fr"
 paginate = 5
-title = "Hugo Theme Stack Starter"
+title = "s00lfly.blog"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
-DefaultContentLanguage = "en"
+DefaultContentLanguage = "fr"
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
