fix(hugo): update some settings

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,8 +1,8 @@
 # Change baseurl before deploy
-baseurl = "https://rguyennot.github.io/"
+baseurl = "https://rguyennot.github.io/blog"
 languageCode = "fr-fr"
 paginate = 5
-title = "s00lfly.blog"
+title = "s00lfly.me"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
