--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://rguyennot.github.io/blog"
+baseurl = "https://rguyennot.github.io/blog/"
 languageCode = "fr-fr"
 paginate = 5
 title = "s00lfly.me"
