--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,14 +18,14 @@ subtitle = "/home/s00lfly"
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/avatar.png"
+src = "avatar.jpg"
 
 [article]
 math = false
 readingTime = true
 
 [article.license]
-enabled = true
+enabled = false
 default = "Licensed under CC BY-NC-SA 4.0"
 
 ## Widgets
