--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "blog-demo.petreguyennot.fr" # set values to "/blog" of you host on Pages
+baseurl = "blog.petreguyennot.fr" # set values to "/blog" of you host on Pages
 languageCode = "fr-fr"
 paginate = 5
 title = "s00lfly.me"
