--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,79 +1,43 @@
-name: Deploy to Github Pages
+name: CI
 
 on:
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  workflow_dispatch:
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-        steps:
-            - uses: actions/checkout@v2
+      - name: Install Hugo engine
+        run: sudo apt update && sudo apt install -y hugo unzip python3-pip
 
-            - name: Cache Hugo resources
-              uses: actions/cache@v2
-              env:
-                  cache-name: cache-hugo-resources
-              with:
-                  path: resources
-                  key: ${{ env.cache-name }}
+      - name: Install Aws CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
+          cd /tmp
+          unzip awscliv2.zip
+          sudo ./aws/install --update
+          cd -
 
-            - uses: actions/setup-go@v2
-              with:
-                  go-version: "^1.17.0"
-            - run: go version
+      - name: Install awscli_plugin_endpoint
+        run: pip3 install awscli_plugin_endpoint && pip3 show awscli_plugin_endpoint
 
-            - name: Cache Go Modules
-              uses: actions/cache@v2
-              with:
-                  path: |
-                      ~/.cache/go-build
-                      ~/go/pkg/mod
-                  key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-                  restore-keys: |
-                      ${{ runner.os }}-go-
+      - name: copy ScaleWay AWS CLI configuration
+        run: |
+          mkdir ~/.aws
+          cp ./aws/config ~/.aws/config
 
-            - name: Setup Hugo
-              uses: peaceiris/actions-hugo@v2
-              with:
-                  hugo-version: "latest"
-                  extended: true
+      - name: Compile items
+        run: hugo --minify --gc
 
-            - name: Build
-              run: hugo --minify --gc
-
-            # - name: Deploy 🚀
-            #   uses: JamesIves/github-pages-deploy-action@4.1.4
-            #   with:
-            #       branch: gh-pages
-            #       folder: public
-            #       clean: true
-            #       single-commit: true
-
-            - name: Install AWS CLI v2
-              run: |
-                curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
-                cd /tmp
-                unzip awscliv2.zip
-                sudo ./aws/install --update
-                cd -
-
-            - name: Install awscli_plugin_endpoint
-              run: pip3 install awscli_plugin_endpoint && pip3 show awscli_plugin_endpoint
-
-            - name: copy Scaleway AWS CLI configuration
-              run: |
-                mkdir ~/.aws
-                cp ./aws/config ~/.aws/config
-
-            - name: Compile items
-              run: hugo -D
-
-            - name: Push to Scaleway storage
-              env:
-                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              run: /usr/local/bin/aws s3 sync --delete ./public/ s3://blog.petreguyennot.fr/
+      - name: Push to Scaleway storage
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: /usr/local/bin/aws s3 sync --delete ./public/ s3://blog.petreguyennot.fr/
